tests/paczka1/fuzzy1/66469932.err
Error in line 13: 1ughz S758 60,6
Error in line 18: zUScVIQO S758 91,9
Error in line 17: 1ughz A272 49,5
Error in line 29: 1ughz A134 60,28
Error in line 20: zUScVIQO A134 30,8
Error in line 35: zUScVIQO S404 31,6
